# radio-proto

./: model.py  pyproject.toml  requirements.txt  run.py
examples/: findings.txt
examples/0/: transcript_O.txt
examples/1/: findings.txt  impression.txt  transcript_G.txt
examples/2/: findings.txt  impression.txt  transcript_G.txt
templates/: index.html
