[tool.poetry]
name = "proj-radio"
version = "0.1.0"
description = "Prototype for automatic radiology report generation"
authors = ["karanpraharaj"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
openai = "^0.28.1"
aioflask = "^0.4.0"
requests = "^2.31.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
